# paragon2

./: .gitignore  README.md  paragon.cabal
src/Language/Java/: Paragon.hs
src/Language/Java/Paragon/: Compile.hs  Decorations.hs  Error.hs  ErrorTxt.hs  Interaction.hs  LockStateEval.hs  NameResolution.hs  NewTypeCheck.hs  OldTypeCheck.hs  Parser.hs  PiGeneration.hs  PolicyConstraintGen.hs  PolicyConstraintSolver.hs  PolicyLang.hs  PolicyLang.hs-boot  PolicyTypeEval.hs  Pretty.hs  RemoveAnns.hs  RemoveAnnsTTG.hs  SourcePos.hs  Syntax.hs  SyntaxInstances.hs  SyntaxTTG.hs  ToSP.hs  TypeCheck.hs  TypesTTG.hs  flycheck_Interaction.hs
src/Language/Java/Paragon/Decorations/: DecorationTypes.hs  LseDecoration.hs  NoDecoration.hs  NrDecoration.hs  PaDecoration.hs  PcgDecoration.hs  PcsDecoration.hs  PteDecoration.hs  TcDecoration.hs
src/Language/Java/Paragon/Monad/: Base.hs  PiReader.hs
src/Language/Java/Paragon/NameResolution/: Monad.hs
src/Language/Java/Paragon/PolicyLang/: Actors.hs  Locks.hs  Policy.hs
src/Language/Java/Paragon/PolicyTypeEval/: PteExp.hs  PteStmt.hs
src/Language/Java/Paragon/TypeCheck/: Interpreter.hs  Monad.hs  NotAppl.hs  NotAppl2.hs  TcExp.hs  TcExp.hs-boot  TcStmt.hs  TcTypeDecl.hs  TypeMap.hs  Types.hs  Types.hs-boot
src/Language/Java/Paragon/TypeCheck copy/: TypeMap.hs  Types.hs-boot
src/Language/Java/Paragon/TypeCheck copy/Monad/: CodeState.hs  TcDeclM.hs  TcDeclM.hs-boot
src/Language/Java/Paragon/TypeCheck/Monad/: CodeEnv.hs  CodeM.hs  CodeState.hs  TcCodeM.hs  TcDeclM.hs  TcDeclM.hs-boot
test/: RunCommand.hs  SuiteBad.hs  SuiteGood.hs  SuiteIssues.hs  TestUtils.hs
test/bad/fieldpolicy/: FieldWritePolicy.para  InvalidPolicyModifier.para  StaticFieldFromPolicy.para  StaticFieldFromStaticFieldHighToLow.para  StaticFieldGiveIntToPolicy.para  StaticFieldPolicyFromNonPolicy.para
test/bad/fieldstatic/: AssignObjectFromObject.para  AssignPrimitiveFromObject.para
test/good/arrays/: BasicArray.java  BasicArrayPolicies.java
test/good/containment/: Good1.java  Good2.java  Good3.java  Good4.java  Good5.java  Good6.java  Good7.java  OpeningLock.java
test/good/fieldpolicy/: StaticFieldFromStaticFieldLowToHigh.para  StaticFieldFromStaticFieldSamePolicy.para
test/good/fieldstatic/: InstanceMethodFromInstanceField.java  InstanceMethodStaticFieldFromInstanceField.java  StaticMethodFromInstanceArrayField.java  StaticMethodFromInstanceField.java  StaticMethodFromStaticField.java  StaticMethodInstanceFieldFromStaticField.java  StaticMethodInstanceMethodFromStaticField.java  StaticMethodStaticMethodFromInstanceField.java  ThisInstanceMethodFromInstanceField.java
test/good/inference/: DoubleCall.java  Good1.java  Guess.java  NandM.java  PossibilityInferred.java
test/good/interfacefields/: InterfaceField.java
test/good/lockproperties/: Reflexivity.java  RunsFor.java  Symmetry.java  Transitivity.java
test/good/lockquerying/: Basic.java  BasicUnary.java  UnaryActor.java
test/good/methodoverloading/: InterfaceMethodOverloading.java  MethodOverloading.java
test/good/methodstatic/: InstanceArrayAccessAssignmentFromInstanceMethod.java  InstanceArrayAccessFromInstanceMethod.java  InstanceFieldAssignmentFromInstanceMethod.java  InstanceFieldFromInstanceMethod.java  InstanceFieldInstanceMethodFromInstanceMethod.java  InstanceFieldStaticFieldAssignmentFromInstanceMethod.java  InstanceFieldStaticMethodFromInstanceMethod.java  InstanceMethodFromInstanceMethod.java  InstanceMethodStaticFieldFromInstanceMethod.java  InstanceObjectMethodFromInstanceMethod.java  InstanceObjectMethodFromStaticMethod.java  StaticArrayAccessAssignmentFromStaticMethod.java  StaticClassMethodFromInstanceMethod.java  StaticClassMethodFromStaticMethod.java  StaticFieldAssignmentFromInstanceMethod.java  StaticFieldAssignmentFromStaticMethod.java  StaticFieldFromInstanceMethod.java  StaticFieldFromStaticMethod.java  StaticFieldInstanceMethodFromInstanceMethod.java  StaticFieldInstanceMethodFromStaticMethod.java  StaticFieldStaticFieldAssignmentFromStaticMethod.java  StaticFieldStaticMethodFromInstanceMethod.java  StaticFieldStaticMethodFromStaticMethod.java  StaticMethodFromInstanceMethod.java  StaticMethodFromStaticMethod.java  StaticMethodInstanceFieldFromStaticMethod.java  StaticMethodInstanceMethodFromStaticMethod.java  StaticMethodStaticMethodFromInstanceMethod.java  ThisInstanceFieldFromInstanceMethod.java
test/good/policyof/: PolicyOf.java  PolicyOfContainment.java  PolicyOfThis.java
test/good/redeclaration/: BlockDifferentTypes.java  BlockOneType.java
test/good/return/: ReturnEmptyBlock.java  ReturnEmptyTryCatch.java  ReturnEmptyTryFinally.java  ReturnIfThen.java  ReturnIfThenElse.java  ReturnIfThenElse2.java  ReturnIfThenElse3.java  ReturnOpenBlock.java  ReturnSimple.java  ReturnStmtBlock.java  ReturnTryCatch.java  ReturnTryEmptyFinally.java  ReturnTryEmptyFinallyEmpty.java  ReturnVoid.java  ReturnWhile.java  ReturnWhileTrueBreak.java
test/good/typeparams/: Declassify.java
test/issues/issue121/: compile
test/notYetImplemented/good/fieldstatic/: AssignObjectFromPrimitive.para
test/notYetImplemented/issues/issue106/: SecureRandom.java
test/notYetImplemented/issues/issue163/: FileClassMismatch.java
